# wabble

./: CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
assets/: dict.fst  gaddag.fst
crates/wabble-ai/: Cargo.toml
crates/wabble-ai/src/: difficulty.rs  eval.rs  lib.rs  movegen.rs
crates/wabble-client/: Cargo.toml
crates/wabble-client/src/: app_states.rs  main.rs  resources.rs
crates/wabble-client/src/plugins/: audio.rs  lobby_ui.rs  mod.rs  network.rs  profile_ui.rs  shell.rs
crates/wabble-client/src/plugins/words/: board.rs  hud.rs  input.rs  local_ai.rs  mod.rs  rack.rs
crates/wabble-dict/: Cargo.toml
crates/wabble-dict/src/: gaddag.rs  lib.rs  validate.rs  wordlist.rs
crates/wabble-platform/: Cargo.toml
crates/wabble-platform/src/: ai.rs  game_trait.rs  lib.rs  lobby.rs  match_state.rs  player.rs
crates/wabble-words/: Cargo.toml
crates/wabble-words/src/: board.rs  error.rs  game.rs  lib.rs  placement.rs  rack.rs  rules.rs  scoring.rs  tile.rs
data/: test_words.txt
tools/dict-builder/: Cargo.toml
tools/dict-builder/src/: main.rs
