[package]
name = "wabble-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
wabble-platform = { path = "../wabble-platform" }
wabble-words = { path = "../wabble-words" }
wabble-dict = { path = "../wabble-dict" }
bevy = "0.15"

[features]
dev = ["bevy/dynamic_linking"]
desktop = []
